--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
@@ -18,6 +19,7 @@
     "react-scripts": "4.0.1",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
+    "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
