--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "formik": "^2.2.6",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-qr-scanner": "*",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
