--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
-    "react-qr-scanner": "*",
+    "react-qr-reader": "^2.2.1",
+    "react-qr-scanner": "1.0.0-alpha.7",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
